# schema

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
examples/: emit_artifacts.rs
prototype/: Cargo.toml
prototype/schemas/: coordinate.schema  nota.schema
prototype/src/: block_query.rs  blocks.rs  emit.rs  kernel.rs  lib.rs  library.rs  macros.rs  schema.rs  schema_schema.rs
prototype/tests/: block_parser_constraints.rs  kernel.rs  schema.rs  schema_schema_constraints.rs
schema-cc/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  skills.md
schema-cc/src/: dispatch.rs  error.rs  generate.rs  grammar.rs  lib.rs  validate.rs
schema-cc/tests/: dispatch.rs  generate.rs  grammar.rs  validate.rs
schemas/: asschema.asschema  builtin-macros.macro-library  builtin-macros.schema  core.asschema  core.schema  reference-grammar.nota  root.schema  spirit-min.schema
src/: asschema.rs  assembled.rs  declaration.rs  declarative.rs  document.rs  engine.rs  environment.rs  error.rs  expansion.rs  expression.rs  feature.rs  header.rs  identity.rs  import.rs  instance.rs  layout.rs  lib.rs  macro_pattern.rs  macros.rs  module.rs  multi_pass.rs  name.rs  node_shape.rs  nota_reader.rs  object_block.rs  object_pass.rs  parser.rs  raw.rs  reader.rs  reference_resolver_generated.rs  resolution.rs  schema.rs  section.rs  shape_parser.rs  source.rs  specified.rs  store.rs  syntax.rs  upgrade.rs
src/multi_pass/: mod.rs  nota_value.rs  pass1_parser.rs  pass2_structural.rs  pass3_identify.rs  pass4_lower.rs  pass5_assemble.rs  span.rs
tests/: asschema_definition.rs  big_examples.rs  collections.rs  constraint_proofs.rs  core_projection.rs  design_examples.rs  document.rs  effect_side_features.rs  environment.rs  family_declarations.rs  generics.rs  identifier_substrate.rs  identity.rs  impl_catalog.rs  import_unification.rs  indirection_projection.rs  instance_schema_render.rs  legacy_reference_pipeline.rs  lineage.rs  lowering.rs  macro_exploration.rs  macro_pattern.rs  multi_pass.rs  multi_pass_pipeline.rs  node_shape.rs  nota_shape.rs  object_block_pass.rs  object_pass.rs  operator_271_closed_claims.rs  raw_core_schema.rs  reaction.rs  reader.rs  reference_head.rs  resolution.rs  schema_driven_nota_reader.rs  source_codec.rs  specified_schema.rs  symbol_path.rs  syntax_layer.rs  true_schema.rs  (+2 more)
tests/fixtures/: specified-ir.schema
tests/fixtures/big-schemas/: derived-members.schema  imported-mail-consumer.schema  spirit-reactive-large.schema  triad-reactive-large.asschema  triad-reactive-large.schema
tests/fixtures/design/: same-name-payload-variant.schema
tests/fixtures/effect-side/: recorder.schema  storage.schema
tests/fixtures/generated_nota_reader/: expected.rs
tests/fixtures/impl-catalog/: body-optional.schema
tests/fixtures/import-consumer/schema/: lib.schema
tests/fixtures/import-generic-consumer/schema/: lib.schema
tests/fixtures/lowering/: explicit-repeated-variant.schema  self-tagged-variant.schema
tests/fixtures/marker-core/schema/: mail.schema
tests/fixtures/multi-pass/: version-handover.schema
tests/fixtures/plane-crate/schema/: nexus.schema  sema.schema  signal.schema
tests/fixtures/raw-core/: core.schema
tests/fixtures/reaction/schema/: spirit-nexus-concrete.schema  spirit-nexus.schema
tests/fixtures/schema-e2e/: live-spirit.schema  magnitude.schema  sema.schema  shared.schema  spirit-v0-1-1.schema  spirit-v0-1.schema
tests/fixtures/source-codec/: duplicate-inline-and-namespace.schema  duplicate-inline-fields.schema  family-declarations.schema  later-inline-payloads.schema  namespace-enum-bare-variants.schema  namespace-inline-enum-variants.schema  reference-fields.schema  root-header-bare-names.schema  root-inline-payloads.schema  root-payload-field-declarations.schema  stream-relations.schema  trailing-namespace-reference.schema
tests/fixtures/spirit-crate/schema/: lib.schema
tests/fixtures/syntax-layer/: derived-members.schema  name-mismatch.schema  schema.schema
