[package]
name         = "schema-next"
version      = "0.4.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/schema-next"
description  = "Position-aware schema macro engine and semantic schema model."
publish      = false

[lib]
name = "schema_next"
path = "src/lib.rs"

[dependencies]
blake3 = "1"
nota-next = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "typeref-shape" }
rkyv = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
