[package]
name        = "schema-cc"
version     = "0.1.0"
edition     = "2024"
description = "The schema compiler-compiler: the schema/compiler definition kept as typed data that generates the schema compiler."

[dependencies]
nota    = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
proc-macro2  = "1"
quote        = "1"
syn          = { version = "2", features = ["full"] }
prettyplease = "0.2"
thiserror    = "2"

[lints.rust]
unsafe_code = "forbid"
